2003-09-21	Mike Bourgeous		<nitrogen@slimetech.com>

	* Updated README files.
	* Fix bug in tools/dpc/dpcsync.c (10018->0x10018).
	* Added DPC interrupt rate calculation.

2003-09-20	Mike Bourgeous		<nitrogen@slimetech.com>

	* Better flow in tl880_isr_video_sync_dvd in tl880dpc.c.
	* Added script to test DPC interrupt in tools/.
	* Fixed a bug in tl880dpc.c (tl880_set_dpc_clock).

2003-09-19	Mike Bourgeous		<nitrogen@slimetech.com>

	* Working on tl880dma.c.  Less fake register usage.  Improve flow.

2003-09-18	Mike Bourgeous		<nitrogen@slimetech.com>

	* Working on tl880dma.c.  Improve flow somewhat.
	* Added comment about GPIO line 2 to tl880gpio.c.

2003-09-17	Mike Bourgeous		<nitrogen@slimetech.com>

	* Working on tl880dma.c.

2003-09-16	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added tl880_mode_def struct.
	* Split DPC stuff into its own header.
	* Started mode table.
	* Split register stuff into its own header.
	* Added mode set function.
	* Added more DMA code (still not functional though).

2003-09-15	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added extra information about CDma.
	* Added tl880_set_dpc_clock.
	* Added some comments to tl880.h.
	* Added pci_dev and DMA buffer to struct tl880_dev.
	* Added DMA buffer allocate/deallocate to tl880kern.c.
	* Added new DMA function to tl880dma.c.
	* Added some more comments to tl880kern.c.
	* Fixed potential memory leak if memory mapping failed.

2003-09-13	Mike Bourgeous		<nitrogen@slimetech.com>

	* At least one DPC interrupt type now works.
	* Added names to two register regions in tl880doc.txt

2003-09-12	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added interrupt handler for VPIP and started DPC handler.
	* Bottom half only queued for tasks that will take a long time.
	* Added some more cJanus info to myhd_154.txt.
	* Added additional info to one of the VPIP bitfields.
	* Added more to DPC handler.
	* Added more info about tagContext to doc/myhd_154.txt.
