@@ -392,7 +392,7 @@ register 10000 is display options bitfield:
 	00000000|00000000|00000000|00000001	Top/bottom field or top/bottom buffer
 	00000000|00000000|00000000|00000010	Image display enable (BVDO)
 	00000000|00000000|00000000|00000100	OSD display enable
-	00000000|00000000|00000000|00001000	Cursor display enable(?)
+	00000000|00000000|00000000|00001000	Cursor display enable
 	00000000|00000000|00000000|00010000	Aux (i.e. video card overlay) enable
 	00000000|00000000|00000000|00100000	Sync enable/external display enable (not sure)
 	00000000|00000000|00000000|01000000	This does something to the color.
@@ -492,6 +492,8 @@ register 10000 is display options bitfield:
 
 10048 is DispBufReg(?) or NtscDispFrame?
       bits 0x1e-0x14,0x11-0x8,0x7-0x4,0x3-0x0 used in cJanus::RotateNtscDispFrame
+
+10050, 10054 read in CreateAddSurface
 
 10068,1006c used in DoProgressiveFrame with g_vsCtlReg
 
