@@ -1,7 +1,8 @@
 Add functions to set interrupt masks
-Get rid of temporary static variables
+Get rid of temporary static and/or global variables (move to tl880_dev)
 Add ioctl interface for mode switch function and other functions
 Use request_firmware() when it becomes more commonly available
+Replace all ints/longs with appropriate u32/s32/u16/s16 etc. types
 
 
 
