@@ -370,9 +370,11 @@ void tl880_dpc_field0(struct tl880_dev *tl880dev)
 		/* CDma::VopIsrOdd(); */
 	}
 
+	/*
 	this_jiffies = jiffies;
 	printk(KERN_DEBUG "tl880: dpc field0 interrupt - count %lu, time ~%lums\n", dpc_eof0_count, (this_jiffies - last_jiffies) * 1000 / HZ);
 	last_jiffies = this_jiffies;
+	*/
 }
 
 void tl880_dpc_field1(struct tl880_dev *tl880dev)
@@ -391,9 +393,11 @@ void tl880_dpc_field1(struct tl880_dev *tl880dev)
 	/* ecx = (cJanus->0)->0x110; */
 	/* CDma::VopIsrEven(); */
 
+	/*
 	this_jiffies = jiffies;
 	printk(KERN_DEBUG "tl880: dpc field1 interrupt - count %lu, time ~%lums\n", dpc_eof1_count, (this_jiffies - last_jiffies) * 1000 / HZ);
 	last_jiffies = this_jiffies;
+	*/
 }
 
 int tl880_dpc_int(struct tl880_dev *tl880dev)
@@ -408,8 +412,10 @@ int tl880_dpc_int(struct tl880_dev *tl880dev)
 
 	tl880dev->dpc_type = read_register(tl880dev, 0x1000c) & read_register(tl880dev, 0x10008);
 
+	/*
 	printk(KERN_DEBUG "tl880: dpc interrupt: 0x%04lx - count %lu\n", 
 		tl880dev->dpc_type, tl880dev->dpc_count);
+	*/
 
 	if(tl880dev->dpc_type & 4) {
 		tl880_dpc_video_sync(tl880dev);
@@ -428,8 +434,7 @@ int tl880_dpc_int(struct tl880_dev *tl880dev)
 	/* Since this interrupt isn't fully handled yet, disable it after a while */
 	if(tl880dev->dpc_count >= 600) {
 		write_register(tl880dev, 0x10008, 0);
-		printk(KERN_DEBUG "tl880: ~%i dpc interrupts per second\n", tl880dev->dpc_count * HZ / (jiffies - first_jiffies));
-		/* mathematically the 1000's cancel out, but I use them to get around integer precision limits */
+		printk(KERN_DEBUG "tl880: ~%lu dpc interrupts per second\n", tl880dev->dpc_count * HZ / (jiffies - first_jiffies));
 	}
 
 	return 0;
